--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://github.com/r0mka/my-page",
   "name": "my-page",
   "version": "0.1.0",
   "private": true,
@@ -14,8 +13,6 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,7 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "faker": "^5.0.0"
-  }
+  "devDependencies": {}
 }
